Add folders for images and stylesheet.

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Esqueleto</title>
+  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
+  <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
 	<ng-view></ng-view>
