--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
 	<ng-view></ng-view>
+  <script src="lib/angular/angular.min.js"></script>
+  <script src="lib/angular-route/angular-route.min.js"></script>
+  <script src="app/app.js"></script>
+  <script src="app/controllers/viewController.js"></script>
+  <script src="app/services/factoryView.js"></script>
 </body>
 </html>
