Fix de task bundle, create a new task Livereload

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Esqueleto</title>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
-  <link rel="stylesheet" href="styles/stylesheet.css">
+  <link rel="stylesheet" href="endToEndPublic.min.css">
 </head>
 <body>
 	<ng-view></ng-view>
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular-route/angular-route.min.js"></script>
-  <script src="app/app.js"></script>
-  <script src="app/controllers/viewController.js"></script>
-  <script src="app/services/factoryView.js"></script>
+  <script src="endToEndPublic.min.js"></script>
 </body>
 </html>
