--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<ng-view></ng-view>
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular-route/angular-route.min.js"></script>
+  <script src="lib/satellizer/satellizer.min.js"></script>
   <script src="endToEndPublic.min.js"></script>
 </body>
 </html>
